# diffai

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEMONSTRATION.md  DIFFAI_DESIGN_PHILOSOPHY.md  GEMINI.md  README.ja.md  README.md  README_ja.md  README_zh.md  ci-local.sh  cliff.toml  diffai_ml_options_constraints.md  diffai_tasks.md  diffx-core-expansion-analysis.md  diffx-core-expansion-summary.md  docs-vs-implementation-discrepancies.md  test1.json  test2.json
.claude/: DIFFAI_DESIGN_PHILOSOPHY.md  diffai_ml_options_constraints.md  docs-vs-implementation-discrepancies.md  release-guide.md  settings.local.json  tasks.md
.claude/reboot/: migration-status.md  reboot-plan.md  reboot-summary.md
.github/: labels.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  changelog.yml  ci.yml  release-act1.yml  release-act2.yml  release.yml
comprehensive-demo/: basic_json_diff.md  basic_verbose_mode.md  basic_yaml_output.md  cli_help_output.md  cli_version_info.md  format_json_comparison.md  format_toml_comparison.md  format_xml_comparison.md  format_yaml_comparison.md  ml_anomaly_detection.md  ml_basic_comparison.md  ml_combined_features.md  ml_convergence_analysis.md
demo-outputs/: help-output.txt  json-output-format.txt  ml-model-architecture.txt  verbose-output.txt
diffai-cli/: Cargo.toml  build.rs
diffai-cli/src/: cli.rs  commands.rs  formatters.rs  input.rs  main.rs
diffai-cli/tests/: cmd.rs
diffai-cli/tests/cmd/: basic.md  formats.md  ml-analysis.md  options.md  output.md
diffai-core/: Cargo.toml
diffai-core/benches/: diff_benchmark.rs  ml_performance.rs
diffai-core/src/: diff.rs  lib.rs  ml_analysis.rs  output.rs  types.rs
diffai-core/src/ml_analysis/: activation.rs  architecture.rs  attention.rs  batch_norm.rs  complexity.rs  convergence.rs  ensemble.rs  gradient.rs  learning_rate.rs  memory.rs  metrics.rs  mod.rs  quantization.rs  regularization.rs  weight.rs
diffai-core/src/ml_analysis/convergence/: epoch.rs  learning_curves.rs  loss.rs  mod.rs  optimization.rs  patterns.rs  plateau.rs  stability.rs
diffai-core/src/ml_analysis/gradient/: distributions.rs  flow.rs  magnitudes.rs  mod.rs  statistics.rs  types.rs
diffai-core/src/ml_analysis/quantization/: impact.rs  methods.rs  mod.rs  precision.rs  types.rs
diffai-core/src/parsers/: matlab.rs  mod.rs  numpy.rs  pytorch.rs  safetensors.rs
diffai-core/tests/: cli_reference_examples.rs  core_format_tests_simple.rs  core_ml_analysis_tests.rs  core_unified_api_tests.rs  fixtures.rs  formats_examples.rs  implementation_examples.rs  lib.rs  ml_analysis_examples.rs  mod.rs  test_unified_api.rs  test_unified_api.rs.disabled
diffai-core/tests/docs_examples/: basic_usage_examples.rs  cli_reference_examples.rs  design_principles_examples.rs  formats_examples.rs  implementation_examples.rs  ml_analysis_examples.rs  ml_model_comparison_examples.rs  ml_recommendations_examples.rs  ml_workflows_examples.rs  mod.rs  output_formats_examples.rs  readme_examples.rs  scientific_data_examples.rs  verbose_output_examples.rs
diffai-core/tests/unit/: unit_tests.rs
diffai-js/: Cargo.toml  README.md  diffai-js.linux-x64-gnu.node  examples.ts  index.d.ts  index.js  lib.js  package-lock.json  package.json  test.js  test_simple.js
diffai-js/fixtures/: test1.json  test2.json
diffai-js/scripts/: download-binary.js
diffai-js/src/: lib.rs
diffai-js/tests/: jest.config.js  ml-setup.js  setup.js  test-unified-api.test.js
diffai-npm/: README.md  examples.js  index.js  lib.js  package.json  test.js
diffai-npm/scripts/: download-all-binaries.js  download-binary.js
diffai-npm/tests/: basic.test.js  cli.test.js  formats.test.js
diffai-python/: Cargo.toml  README.md  examples.py  pyproject.toml  test.py  test_integration.py  test_simple.py
diffai-python/python/diffai/: __init__.py
diffai-python/src/: lib.rs  main.rs
diffai-python/src/diffai/: __init__.py  compat.py  diffai.py  installer.py
diffai-python/src/diffai_python/: __init__.py  installer.py
diffai-python/tests/: __init__.py  formats_examples.py  implementation_examples.py  ml_analysis_examples.py  output_formats_examples.py  readme_examples.py  scientific_data_examples.py  test_unified_api.py  verbose_output_examples.py
diffai-python/tests/docs_examples/: basic_usage_examples.py  cli_reference_examples.py  design_principles_examples.py  ml_model_comparison_examples.py  ml_recommendations_examples.py  ml_workflows_examples.py
docs/: api-reference.md  formats.md  formats_zh.md  index.md  index_ja.md  index_zh.md  ml-analysis.md  ml-analysis_zh.md  quick-start.md  quick-start_zh.md
docs/architecture/: design-principles.md  design-principles_ja.md  design-principles_zh.md  implementation.md  implementation_ja.md  implementation_zh.md
docs/bindings/: unified-api.md  unified-api_ja.md  unified-api_zh.md
docs/examples/: README.md
docs/examples-code/: README.md
docs/reference/: api-reference.md  api-reference_ja.md  api-reference_zh.md  cli-reference.md  cli-reference_ja.md  cli-reference_zh.md  formats.md  formats_ja.md  formats_zh.md  ml-analysis-detailed.md  ml-analysis-detailed_ja.md  ml-analysis-detailed_zh.md  ml-analysis-implemented.md  ml-analysis.md  ml-analysis_ja.md  ml-analysis_zh.md  ml-recommendations.md  ml-recommendations_ja.md  ml-recommendations_zh.md  output-formats.md  output-formats_ja.md  output-formats_zh.md
docs/specs/: cli.md  core.md
docs/user-guide/: basic-usage.md  basic-usage_ja.md  basic-usage_zh.md  examples.md  examples_ja.md  examples_zh.md  getting-started.md  getting-started_ja.md  getting-started_zh.md  installation.md  installation_ja.md  installation_zh.md  ml-model-comparison.md  ml-model-comparison_ja.md  ml-model-comparison_zh.md  (+9 more)
examples/: README.md
real_models_test/: download_models.py
scripts/: README.md  ci-local.sh  create_test_models.py  generate_test_models.py  publish-all.sh  publish-npm.sh  publish-pypi.sh  setup-github-workflow.sh  test-published-packages.sh
test-models/: README.md
tests/: mod.rs
(+211 files in other folders)
