[workspace]
resolver = "2"
members = [
    "diffai-core",
    "diffai-cli",
    "diffai-python",
    "diffai-js"
]

[workspace.package]
version = "0.3.16"
edition = "2021"
authors = ["kako-jun"]
license = "MIT"
description = "🤖 AI/ML specialized diff tool for deep learning models - PyTorch, Safetensors, tensor analysis, model comparison, experiment tracking"
homepage = "https://github.com/kako-jun/diffai"
repository = "https://github.com/kako-jun/diffai"
documentation = "https://github.com/kako-jun/diffai/tree/main/docs"
readme = "README.md"
keywords = ["diff", "ai", "ml", "pytorch", "safetensors"]
categories = ["command-line-utilities", "development-tools", "algorithms", "science"]
exclude = [
    ".github/",
    "target/"
]
rust-version = "1.75"

[workspace.dependencies]
diffai-core = { version = "0.3.16", path = "diffai-core" }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "cargo"] }
colored = "3.0"
csv = "1.3"
configparser = "3.0"
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
serde_yaml = "0.9"
toml = "0.8"
walkdir = "2.5"
dirs = "5.0"
regex = "1.0"
similar = "2.7"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.1"
criterion = { version = "0.5", features = ["html_reports"] }
# AI/ML dependencies
candle-core = "0.8"
candle-nn = "0.8"
safetensors = "0.4"
bytemuck = "1.14"
# Scientific data dependencies
ndarray = "0.16"
# numpy = "0.21"  # Removed: only needed for Python bindings, causes PyO3 issues
# hdf5 = "0.8"  # Requires system HDF5 libraries
zip = "2.2"
matfile = "0.1"  # MATLAB .mat file support
pyo3 = { version = "0.22", features = ["extension-module"] }
napi = { version = "2.2", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2.2"
napi-build = "2.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
