[workspace]
resolver = "2"
members = [
    "diffai-core",
    "diffai-cli",
]

[workspace.package]
version = "0.3.17"
edition = "2021"
authors = ["kako-jun"]
license = "MIT"
description = "AI/ML model diff tool - PyTorch, Safetensors, NumPy, MATLAB tensor comparison with automatic ML analysis"
homepage = "https://github.com/kako-jun/diffai"
repository = "https://github.com/kako-jun/diffai"
documentation = "https://docs.rs/diffai"
readme = "README.md"
keywords = ["diff", "ai", "ml", "pytorch", "safetensors"]
categories = ["command-line-utilities", "development-tools", "algorithms", "science"]
exclude = [
    ".github/",
    "target/",
]
rust-version = "1.75"

[workspace.metadata.docs.rs.badges]
maintenance = { status = "actively-developed" }

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
diffai-core = { version = "0.3.17", path = "diffai-core" }
diffx-core = "0.6"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "cargo"] }
colored = "3.0"
csv = "1.3"
configparser = "3.0"
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_yml = "0.0.12"
toml = "0.8"
walkdir = "2.5"
dirs = "5.0"
regex = "1.0"
similar = "2.7"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.1"
criterion = { version = "0.5", features = ["html_reports"] }
cargo-husky = { version = "1.5", default-features = false, features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"] }
# AI/ML dependencies
candle-core = "0.8"
candle-nn = "0.8"
safetensors = "0.4"
bytemuck = "1.14"
# Scientific data dependencies
ndarray = "0.16"
zip = "2.2"
matfile = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
