[package]
name = "diffai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AI/ML specialized diff CLI - PyTorch, Safetensors model comparison, tensor analysis"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
rust-version.workspace = true

[dependencies]
diffai-core = { path = "../diffai-core", version = "0.2.0" }
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
similar = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }

[[test]]
name = "integration"
path = "../tests/integration/mod.rs"

[[test]]
name = "unit"
path = "../tests/unit/mod.rs"
