[package]
name = "diffai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AI/ML specialized diff CLI - PyTorch, Safetensors model comparison, tensor analysis"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
rust-version.workspace = true

[dependencies]
diffai-core = { path = "../diffai-core", version = "0.3.8" }
diffx-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
similar = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[[test]]
name = "basic"
path = "../tests/basic/mod.rs"

[[test]]
name = "cli"
path = "../tests/cli/mod.rs"

[[test]]
name = "core"
path = "../tests/core/mod.rs"

[[test]]
name = "docs_examples"
path = "../tests/docs_examples/mod.rs"

[[test]]
name = "errors"
path = "../tests/errors/mod.rs"

[[test]]
name = "features"
path = "../tests/features/mod.rs"

[[test]]
name = "formats"
path = "../tests/formats/mod.rs"
