[package]
name = "diffai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AI/ML model diff CLI - PyTorch, Safetensors, NumPy, MATLAB comparison"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
rust-version.workspace = true

[dependencies]
diffai-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = "4.5"
colored = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
similar = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }

[build-dependencies]
safetensors = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
trycmd = "0.15"
cargo-husky = { workspace = true }

# trycmd documentation tests
[[test]]
name = "cmd"
path = "tests/cmd.rs"
