[package]
name = "diffai-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for AI/ML diff analysis - PyTorch, Safetensors, tensor statistics"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
rust-version.workspace = true

[dependencies]
diffx-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
safetensors = { workspace = true }
bytemuck = { workspace = true }
ndarray = { workspace = true }
zip = { workspace = true }
matfile = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
cargo-husky = { workspace = true }

[[bench]]
name = "diff_benchmark"
harness = false

[[bench]]
name = "ml_performance"
harness = false
