[package]
name = "diffai-python"
version = "0.3.16"
edition = "2021"
description = "Python bindings for diffai - AI/ML focused structured data comparison"
license = "MIT"
repository = "https://github.com/kako-jun/diffai"
authors = ["kako-jun"]

[lib]
name = "diffai_python"
crate-type = ["cdylib"]

[dependencies]
# Core diffai functionality
diffai-core = { path = "../diffai-core" }

# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.0"

[build-dependencies]
pyo3-build-config = "0.22"